--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-get-location": "^2.2.1",
     "react-native-maps": "^0.29.4",
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
